networking/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-test
spec:
  hosts:
  - "*"
  gateways:
   - gateway-test
  http:

  - match:
    - uri:
        prefix: /eco
    route:
    - destination:
        host: svc-echo-service-a.test.svc.cluster.local
